--- a/src/app/sistema/vendas/pedidos-vendas/editar-pedido/editar-pedido.component.html
+++ b/src/app/sistema/vendas/pedidos-vendas/editar-pedido/editar-pedido.component.html
@@ -426,7 +426,7 @@
 
                     <div class="row m-0 mt-4 py-3 border-bottom">
                         <div class="col-12 m-0 p-0 text-custom-dark">
-                            <h4>Criar pedido</h4>
+                            <h4>Editar pedido</h4>
                         </div>
                     </div>
 
