--- a/src/app/sistema/vendas/pedidos-vendas/editar-pedido/editar-pedido.component.html
+++ b/src/app/sistema/vendas/pedidos-vendas/editar-pedido/editar-pedido.component.html
@@ -502,8 +502,8 @@
                 </td>
                 <td>
                   <input currencyMask class="form-control form-control-sm" type="text" placeholder="R$" id="valorFrete"
-                    formControlName="valorFrete" (keyup)="setThisFrete(oneItem.value, $event)"
-                    (keyup)="totalProduto(oneItem.value)" />
+                    formControlName="valorFrete" (keyup)="totalProduto(oneItem.value)" />
+                    <!-- (keyup)="setThisFrete(oneItem.value, $event)" -->
                 </td>
               </tr>
             </tbody>
@@ -634,9 +634,7 @@
                 <option value="" disabled selected>
                   Selecione uma condição
                 </option>
-                <option value="Loja 1">À vista</option>
-                <option value="Loja 2">Parcelado</option>
-                <option value="personalizado">Personalizado</option>
+                <option *ngFor="let pagamento of condPagamentos" value="{{pagamento.nome}}">{{pagamento.nome}}</option>
               </select>
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Selecione a condição de pagamento</label>
             </div>
