--- a/src/app/sistema/estoque/fornecedores/adicionar-fornecedores/adicionar-fornecedores.component.html
+++ b/src/app/sistema/estoque/fornecedores/adicionar-fornecedores/adicionar-fornecedores.component.html
@@ -447,57 +447,36 @@
           <div class="row pt-3 m-0">
             <div class="col-12 px-2 m-0 p-0">
               <h5 class="fw-bold text-custom-dark m-0 p-0">
-                Informações adicionais
+                Condições de pagamento
               </h5>
             </div>
 
             <div class="col-12 px-2 p-0 m-0">
               <p>Selecione as condições de pagamento disponíveis</p>
-              <div class="form-check form-check-inline px-4">
-                <input
-                  class="form-check-input shadow-sm"
-                  type="checkbox"
-                  id="vista"
-                  value="vista"
-                />
-                <label class="form-check-label" for="vista">À vista</label>
+              <ng-container *ngFor="let condicao of paymentCondition">
+                <div class="form-check form-check-inline px-4">
+                  <input
+                    (click)="checkPayment(condicao.id)"
+                    class="form-check-input shadow-sm"
+                    type="checkbox"
+                  />
+                  <label class="form-check-label">{{ condicao?.nome }}</label>
                     </div>
-                    <div class="form-check form-check-inline px-4">
-                        <input class="form-check-input shadow-sm" type="checkbox" id="ddl10" value="ddl10" />
-                        <label class="form-check-label" for="ddl10">DDL 10</label>
-                    </div>
-                    <div class="form-check form-check-inline px-4">
-                        <input class="form-check-input shadow-sm" type="checkbox" id="ddl30" value="ddl30" />
-                        <label class="form-check-label" for="ddl30">DDL 30</label>
-                    </div>
-                    <div class="form-check form-check-inline px-4">
-                        <input class="form-check-input shadow-sm" type="checkbox" id="ddl304560" value="ddl304560" />
-                        <label class="form-check-label" for="ddl304560">DDL 30, 45, 60</label
-                >
-              </div>
-              <div class="form-check form-check-inline px-4">
-                <input
-                  class="form-check-input shadow-sm"
-                  type="checkbox"
-                  id="ddl306090"
-                  value="ddl306090"
-                />
-                <label class="form-check-label" for="ddl306090"
-                  >DDL 30, 60, 90</label
-                >
-              </div>
+                    </ng-container>
+                </div>
             </div>
 
-            <!-- Data da primeira compra -->
-            <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-              <input
-                class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
-                type="date"
-                placeholder="Data da primeira compra"
-                formControlName="first_payment"
-              />
-              <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >Data da primeira compra</label
+            <div class="row pt-3 m-0">
+                <div class="col-12 px-2 m-0 p-0">
+                    <h5 class="fw-bold text-custom-dark m-0 p-0">
+                        Informações adicionais
+                    </h5>
+                </div>
+
+                <!-- Data da primeira compra -->
+                <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
+                    <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="date" placeholder="Data da primeira compra" formControlName="first_payment" />
+                    <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data da primeira compra</label
               >
             </div>
 
